1. 從新鼎dataBase拉資料到Container Record中

--- a/.env
+++ b/.env
@@ -5,13 +5,19 @@ APP_DEBUG = false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=urg
 DB_USERNAME=root
 DB_PASSWORD=root
+
+DB_CONNECTION_CONTAINER_REMOTE=pgsql
+DB_HOST_CONTAINER_REMOTE=10.86.83.144
+DB_PORT_CONTAINER_REMOTE=5432
+DB_DATABASE_CONTAINER_REMOTE=BubblerDB
+DB_USERNAME_CONTAINER_REMOTE=postgres
+DB_PASSWORD_CONTAINER_REMOTE=postgres
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
