1. 新增container 磅秤頁面

--- a/.env
+++ b/.env
@@ -11,6 +11,8 @@ DB_PORT=3306
 DB_DATABASE=urg
 DB_USERNAME=root
 DB_PASSWORD=root
+DB_DATABASE_BALANCE=balance
+
 
 DB_CONNECTION_CONTAINER_REMOTE=pgsql
 DB_HOST_CONTAINER_REMOTE=10.86.83.144
