1. 新增超過規格(OOS的標示)

--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ DB_DATABASE=urg
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_DATABASE_BALANCE=balance
+DB_DATABASE_INVENTORY=inventory
 
 
 DB_CONNECTION_CONTAINER_REMOTE=pgsql
